added more examples to api
